take into account further reviews